[package]
name = "nvme"
version = "0.1.0"
authors = ["Gregory C. Oakes <gregcoakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
modular-bitfield = "0.11.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
memoffset = "0.6.3"
serde_json = "1.0"
